--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
-<h1>Hello World! Atlease something to show</h1>
-<h2>Ading h2 Heading Text to check if my gitusername is pushed </h2>
-<h3>Giving one more try</h3>
-<h4>A Final Try for correct github username</h4>
+<app-layout>
+  <mat-sidenav-container>
+    <mat-sidenav #sidenav role="navigation">
+      <!--this is a place for us to add side-nav code-->
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <!--in here all the content must reside. We will add a navigation header as well-->
+      Hi this is sidenav content
+      <main>
+        <router-outlet></router-outlet>
+      </main>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</app-layout>
